# streamscribe

./: .gitignore  G&S_main.py  LICENSE  README.md  TRY.py  Try_matar.py  all_main.py  app.py  app_all.py  data.json  def process_video  dummy.py  main.py  main_2.py  main_Gali.py  main_shahar.py  matar_main.py  new_app.py  processed_video.json  punktnvosk_new_app.py  pyproject.toml  run_app.py  streamlit_new_app.py  sum_model.py  test_ffmpeg.py  vosk_comment_new_app.py
processed_videos/: videoplayback (1)_processed.json
streamscribe/: main.py
streamscribe/processor/: NLP_MODEL.py  nlp_models.py  video_processing.py
