[tool.poetry]
name = "streamscribe"
version = "0.1.0"
description = ""
authors = ["shaharTasa <136985326+shaharTasa@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.40.1"
moviepy = "^1.0.3"
pydub = "^0.25.1"
transformers = "^4.46.2"
deep-translator = "^1.11.4"
langchain-groq = "^0.2.1"
pydantic = "^2.9.2"
pytest = "^8.3.3"
langchain-core = "^0.3.16"
nltk = "^3.9.1"
torch = "^2.5.1"
whisper = "^1.1.10"
vosk = "^0.3.45"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
