[tool.poetry]
name = "streamscribe"
version = "0.1.0"
description = ""
authors = ["shaharTasa <136985326+shaharTasa@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "streamscribe"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.40.1"
moviepy = "^1.0.3"
pydub = "^0.25.1"
deep-translator = "^1.11.4"
langchain-groq = "^0.2.1"
pydantic = "^2.9.2"
pytest = "^8.3.3"
langchain-core = "^0.3.16"
nltk = "^3.9.1"
torch = "^2.5.1"
whisper = "^1.1.10"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"
rake-nltk = "^1.0.6"
python-dotenv = "^1.0.1"
spacy = "^3.8.2"
soundfile = "^0.12.1"
openai-whisper = "20240930" 
sentencepiece = "^0.2.0"
sacremoses = "^0.1.1"
transformers = ">=4.41.0"
sentence-transformers = "^3.3.0"
yt-dlp = "^2024.11.18"
uuid = "^1.30"
matplotlib = "^3.9.2"
textblob = "^0.18.0.post0"
ffmpeg-python = "^0.2.0"
imageio-ffmpeg = "^0.5.1"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
